Fixed issued with login button. Not responsive but works at full screen

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -72,6 +72,28 @@ div{
   
 }
 
+#loginButton{
+  font-family: 'Lora', serif;
+  text-shadow: none;
+  background-color: rgba(0,0,0, .0);
+  border: none;
+  position: relative;
+	-webkit-animation-name: trickery;
+	-webkit-animation-duration: 1s;
+	-webkit-animation-timing-function: linear;
+	-moz-animation-name: trickery;
+	-moz-animation-duration: 1s;
+	-moz-animation-timing-function: linear;
+	-0-animation-name: trickery;
+	-0-animation-duration: 1s;
+	-0-animation-timing-function: linear;
+	animation-name: trickery;
+	animation-duration: 1s;
+	animation-timing-function: linear;
+    -webkit-animation: mySecond 1s; /* Chrome, Safari, Opera */
+	animation: mySecond 1s;
+  margin: 85px auto;
+}
 div.transparent{
 	border: solid rgba(25,25,25,.0);
 	border-radius: 10px 10px 10px 10px;
@@ -83,7 +105,6 @@ div.transparent{
 	-webkit-box-shadow: inset 0px 1px 0px rgba(200,200,200, .8), 0px 10px 0px 0px rgb(240,240,240, .8), 0px 10px 5px #999;
 	-moz-box-shadow: inset 0px 1px 0px rgba(200,200,200, .8), 0px 10px 0px 0px rgb(240,240,240, .8), 0px 10px 5px #999;
 	box-shadow: inset 0px 1px 0px rgba(200,200,200, .8), 0px 10px 0px 0px rgb(240,240,240, .8), 0px 10px 5px #999;
-  
 }
 
 div.centerButton{
@@ -129,7 +150,7 @@ div.tight{
 	-webkit-box-shadow: inset 0px 1px 0px rgba(200,200,200, .8), 0px 10px 0px 0px rgb(240,240,240, .8), 0px 10px 5px #999;
 	-moz-box-shadow: inset 0px 1px 0px rgba(200,200,200, .8), 0px 10px 0px 0px rgb(240,240,240, .8), 0px 10px 5px #999;
 	box-shadow: inset 0px 1px 0px rgba(200,200,200, .8), 0px 10px 0px 0px rgb(240,240,240, .8), 0px 10px 5px #999;
-  
+  position: relative;
 }
 
 div.tightdark{
@@ -352,6 +373,29 @@ input.navbutton:hover, input.navbutton:focus{
 	background-color: white;
 }
 
+.popUpButton{
+	margin: 200px auto;
+	width:200px;
+	background: rgba(10,200,10, 1); /*the colour of the button*/
+	padding: 8px 14px 10px; /*apply some padding inside the button*/
+	border:1px solid rgba(200,10,10,.5); /*required or the default border for the browser will appear*/
+	cursor:pointer; /*forces the cursor to change to a hand when the button is hovered*/
+	/*style the text*/
+	font-size:.75em;
+	font-family:Oswald, sans-serif; /*Oswald is available from http://www.google.com/webfonts/specimen/Oswald*/
+	letter-spacing:.1em;
+	text-shadow: 0 -1px 0px rgba(0, 0, 0, 0.3); /*give the text a shadow - doesn't appear in Opera 12.02 or earlier*/
+	color: rgba(10,10,10,.5);
+	/*use box-shadow to give the button some depth - see cssdemos.tupence.co.uk/box-shadow.htm#demo7 for more info on this technique*/
+	-webkit-box-shadow: inset 0px 1px 0px #3e9cbf, 0px 5px 0px 0px #205c73, 0px 10px 5px #999;
+	-moz-box-shadow: inset 0px 1px 0px #3e9cbf, 0px 5px 0px 0px #205c73, 0px 10px 5px #999;
+	box-shadow: inset 0px 1px 0px #3e9cbf, 0px 5px 0px 0px #205c73, 0px 10px 5px #999;
+	/*give the corners a small curve*/
+	-moz-border-radius: 10px;
+	-webkit-border-radius: 10px;
+	border-radius: 10px;
+  
+}
 input.beginbutton{
 	margin: auto;
 	width:200px;
@@ -373,6 +417,7 @@ input.beginbutton{
 	-moz-border-radius: 10px;
 	-webkit-border-radius: 10px;
 	border-radius: 10px;
+
 }
 
 input.beginbutton:hover, input.navbutton:focus{
@@ -530,6 +575,7 @@ input.button:hover, input.updatebutton:focus {
 			-moz-border-radius: 10px;
 			-webkit-border-radius: 10px;
 			border-radius: 10px;
+      z-index:50;
 		}
 		
 		img.main{
@@ -545,10 +591,15 @@ input.button:hover, input.updatebutton:focus {
 	.signup { 
 		width: 150px; 
 		padding: 10px; 
-		background-color: #FF8C00; 
+		background-color: rgba(255,255,255, 1); 
+    border-radius: 5px 5px 5px 5px;
 		box-shadow: -8px 8px 10px 3px rgba(0,0,0,0.2); 
 		font-weight:bold; 
-		text-decoration:none; 
+		text-decoration:none;
+    -webkit-transition: all 5s ease-in-out;
+    -moz-transition: all 5s ease-in-out;
+    -o-transition: all 5s ease-in-out;
+    transition: all 5s ease-in-out; 
 	} 
 		
 	#cover{ 
@@ -556,27 +607,39 @@ input.button:hover, input.updatebutton:focus {
 		top:0; 
 		left:0; 
 		background:rgba(0,0,0,0.6); 
-		z-index:5; 
+		z-index:-20; 
 		width:100%; 
 		height:100%; 
-		display:none; 
+		display:none;
+    -webkit-transition: all 5s ease-in-out;
+    -moz-transition: all 5s ease-in-out;
+    -o-transition: all 5s ease-in-out;
+    transition: all 5s ease-in-out; 
 	} 
 			
 	#loginScreen { 
-		height:380px; 
-		width:340px; 
-		margin:0 auto; 
+		height:500px; 
+		width:500px; 
+		margin: auto; 
 		position:relative; 
-		z-index:10; 
-		display:none; 
-		background: url(login.png) no-repeat; 
+		z-index: 10; 
+		display:none;  
 		border:5px solid #cccccc; 
 		border-radius:10px; 
+    -webkit-transition: all 5s ease-in-out;
+    -moz-transition: all 5s ease-in-out;
+    -o-transition: all 5s ease-in-out;
+    transition: all 5s ease-in-out;
 	} 
-				
+
 	#loginScreen:target, #loginScreen:target + #cover{ 
 		display:block; 
-		opacity:2; 
+		opacity:2;
+    margin: auto;
+    -webkit-transition: all 5s ease-in-out;
+    -moz-transition: all 5s ease-in-out;
+    -o-transition: all 5s ease-in-out;
+    transition: all 5s ease-in-out;
 	} 
 					
 	.cancel { 
@@ -592,6 +655,10 @@ input.button:hover, input.updatebutton:focus {
 		text-decoration:none; 
 		text-align:center; 
 		font-weight:bold; 
+    -webkit-transition: all 5s ease-in-out;
+    -moz-transition: all 5s ease-in-out;
+    -o-transition: all 5s ease-in-out;
+    transition: all 5s ease-in-out;
 	} 
 
 	
